--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,48 +12,6 @@
     tools:context="com.example.peter.caffeinecareful.MainActivity">
 
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Current daily dosage:"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <View
-        android:layout_width="1000dp"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:id="@+id/view2"
-        android:layout_above="@+id/button2"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="48dp" />
-
-    <Button
-        android:text="log"
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_centerInParent="false"
-        android:layout_above="@+id/view2"
-        android:layout_alignEnd="@+id/seekBar"
-        android:layout_marginBottom="42dp" />
-
-    <TextView
-        android:text="20%"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:textSize="42sp"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="9dp" />
-
     <View
         android:layout_width="1000dp"
         android:layout_height="1dp"
@@ -75,17 +33,6 @@
         android:layout_below="@+id/view3"
         android:layout_centerHorizontal="true" />
 
-    <SeekBar
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:id="@+id/seekBar"
-        style="@android:style/Widget.Material.SeekBar.Discrete"
-        android:max="4"
-        android:progress="1"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp" />
-
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
@@ -95,15 +42,98 @@
         android:layout_marginTop="14dp"
         android:id="@+id/textView3" />
 
-    <Button
-        android:text="Predict!"
-        android:id="@+id/button2"
-        android:layout_height="100dp"
-        android:layout_width="200dp"
-        android:background="@android:color/holo_blue_bright"
-        android:layout_marginBottom="38dp"
-        android:layout_alignParentBottom="true"
+    <TextView
+        android:text="Current daily dosage:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="20%"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="42sp"
+        android:textColor="@android:color/black"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <SeekBar
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:id="@+id/seekBar"
+        style="@android:style/Widget.Material.SeekBar.Discrete"
+        android:max="4"
+        android:progress="1"
+        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="log"
+        android:id="@+id/button"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_centerInParent="false"
+        android:layout_below="@+id/seekBar"
+        android:layout_alignEnd="@+id/seekBar"
+        android:layout_marginTop="13dp" />
+
+    <View
+        android:layout_width="1000dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:id="@+id/view2"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp" />
+
+    <Button
+        android:text="AFTERNOON"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:elevation="1dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_alignBaseline="@+id/button4"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="MORNING"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:elevation="1dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/textView5"
+        android:layout_toStartOf="@+id/button" />
+
+    <Button
+        android:text="EVENING"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_alignBaseline="@+id/button3"
+        android:layout_alignBottom="@+id/button3"
+        android:layout_toEndOf="@+id/button3" />
+
+    <TextView
+        android:text="     Can I drink \ncoffee right now?"
+        android:lines="2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:textSize="30sp"
+        android:layout_marginTop="29dp"
+        android:layout_below="@+id/view2"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
