--- a/app/src/main/res/layout/content_afternoon.xml
+++ b/app/src/main/res/layout/content_afternoon.xml
@@ -13,4 +13,83 @@
     tools:context="com.example.peter.caffeinecareful.AfternoonActivity"
     tools:showIn="@layout/activity_afternoon">
 
+
+    <TextView
+        android:text="How many cups this morning?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar5"
+        android:layout_alignStart="@+id/seekBar5"
+        android:layout_marginTop="50dp"
+        android:id="@+id/textView10"
+        android:textSize="30sp" />
+
+    <SeekBar
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView10"
+        android:layout_alignStart="@+id/textView10"
+        android:layout_marginTop="22dp"
+        android:id="@+id/seekBar7" />
+
+    <TextView
+        android:text="Soda(s) for lunch?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:id="@+id/textView11"
+        android:layout_below="@+id/seekBar7"
+        android:layout_alignStart="@+id/seekBar7"
+        android:textSize="30sp" />
+
+    <SeekBar
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView11"
+        android:layout_alignStart="@+id/textView11"
+        android:layout_marginTop="23dp"
+        android:id="@+id/seekBar8" />
+
+    <SeekBar
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/seekBar5"
+        android:layout_width="300dp"
+        android:layout_below="@+id/textView9"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar5"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView18" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar7"
+        android:layout_alignEnd="@+id/textView18"
+        android:id="@+id/textView19" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar8"
+        android:layout_alignEnd="@+id/textView19"
+        android:id="@+id/textView20" />
+
+    <TextView
+        android:text="How tired are you?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView9"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/seekBar5" />
+
 </RelativeLayout>
