--- a/app/src/main/res/layout/content_morning.xml
+++ b/app/src/main/res/layout/content_morning.xml
@@ -13,4 +13,83 @@
     tools:context="com.example.peter.caffeinecareful.MorningActivity"
     tools:showIn="@layout/activity_morning">
 
+    <TextView
+        android:text="How tired are you?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="27dp"
+        android:id="@+id/textView6"
+        android:textSize="30sp" />
+
+    <SeekBar
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_alignStart="@+id/seekBar2"
+        android:layout_marginTop="20dp"
+        android:id="@+id/seekBar3" />
+
+    <SeekBar
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:id="@+id/seekBar2"
+        android:layout_width="300dp"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar6"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView14" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar2"
+        android:layout_alignEnd="@+id/textView14"
+        android:id="@+id/textView16" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seekBar3"
+        android:layout_alignStart="@+id/textView14"
+        android:id="@+id/textView17" />
+
+    <TextView
+        android:text="How many hours \nuntil lunch?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textSize="30sp"
+        android:layout_marginTop="48dp"
+        android:layout_below="@+id/textView16"
+        android:layout_alignStart="@+id/textView6" />
+
+    <TextView
+        android:text="Probability of soda \nat lunch?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:layout_marginTop="33dp"
+        android:layout_below="@+id/textView17"
+        android:layout_alignStart="@+id/textView7"
+        android:textSize="30sp" />
+
+    <SeekBar
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:id="@+id/seekBar6"
+        android:layout_below="@+id/textView8"
+        android:layout_alignStart="@+id/seekBar3" />
+
 </RelativeLayout>
