--- a/app/src/main/res/layout/content_evening.xml
+++ b/app/src/main/res/layout/content_evening.xml
@@ -13,56 +13,74 @@
     tools:context="com.example.peter.caffeinecareful.EveningActivity"
     tools:showIn="@layout/activity_evening">
 
-    <TextView
-        android:text="In how many hours will you sleep?"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBar4"
-        android:layout_alignStart="@+id/seekBar4"
-        android:layout_marginTop="46dp"
-        android:id="@+id/textView13"
-        android:textSize="30sp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView22"
+        android:layout_alignParentStart="true">
 
-    <SeekBar
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView13"
-        android:layout_alignStart="@+id/textView13"
-        android:layout_marginTop="25dp"
-        android:id="@+id/seekBar9"
-        android:layout_width="300dp" />
+        <TextView
+            android:text="How much caffiene \nhave you had?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:id="@+id/textView12"
+            android:textSize="30sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/seekBar4" />
 
-    <SeekBar
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:id="@+id/seekBar4"
-        android:layout_below="@+id/textView12"
-        android:layout_centerHorizontal="true" />
+        <SeekBar
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="2"
+            android:progress="1"
+            android:id="@+id/seekBar13"
+            android:layout_marginTop="16dp" />
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBar4"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView21" />
+        <TextView
+            android:text="Some"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/seekBar4"
+            android:layout_centerHorizontal="false"
+            android:id="@+id/textView21"
+            android:layout_marginTop="16dp"
+            android:textSize="20sp"
+            android:textStyle="normal|bold" />
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/seekBar9"
-        android:layout_alignEnd="@+id/textView21"
-        android:id="@+id/textView22" />
+        <TextView
+            android:text="In how many hours \nwill you sleep?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/seekBar4"
+            android:layout_alignStart="@+id/seekBar4"
+            android:layout_marginTop="32dp"
+            android:id="@+id/textView13"
+            android:textSize="30sp" />
 
-    <TextView
-        android:text="How much caffiene have you had?"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:id="@+id/textView12"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/seekBar4" />
+        <SeekBar
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="10"
+            android:progress="3"
+            android:id="@+id/seekBar14"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:text="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/seekBar9"
+            android:layout_alignEnd="@+id/textView21"
+            android:id="@+id/textView22"
+            android:layout_marginTop="16dp"
+            android:textSize="20sp"
+            android:textStyle="normal|bold" />
+
+    </LinearLayout>
 
 </RelativeLayout>
