--- a/app/src/main/res/layout/content_main_activity_basic.xml
+++ b/app/src/main/res/layout/content_main_activity_basic.xml
@@ -13,4 +13,156 @@
     tools:context="com.example.peter.caffeinecareful.MainActivityBasic"
     tools:showIn="@layout/activity_main_basic">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:weightSum="1">
+
+        <android.support.v7.widget.CardView
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_weight="0.11"
+            android:id="@+id/card1"
+            android:layout_height="125dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="1">
+
+                <TextView
+                    android:text="Current daily dosage:"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView15"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textSize="30sp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="14dp" />
+
+                <TextView
+                    android:text="35%"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView23"
+                    android:textStyle="normal|bold"
+                    android:textSize="42sp"
+                    android:layout_marginTop="20dp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_weight="0.11"
+            android:id="@+id/card2"
+            android:layout_height="150dp" >
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="Log cups of coffee!"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView25"
+                    android:textSize="24sp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="14dp" />
+
+                <SeekBar
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_height="wrap_content"
+                    android:max="5"
+                    android:progress="2"
+                    android:id="@+id/seekBar18"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="16dp" />
+
+                <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView26"
+                    android:layout_marginTop="6dp" />
+
+                <Button
+                    android:text="LOG"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/button9"
+                    android:layout_marginTop="6dp"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:layout_marginLeft="105dp"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_weight="0.11"
+            android:id="@+id/card3"
+            android:layout_height="150dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="Can I drink coffee \nright now?"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView27"
+                    android:textSize="24sp"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="14dp" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
+                    <Button
+                        android:text="MORNING"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/button10"
+                        android:layout_weight="1"
+                        style="@style/Widget.AppCompat.Button.Colored" />
+
+                    <Button
+                        android:text="AFTERNOON"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/button11"
+                        android:layout_weight="1"
+                        android:elevation="0dp"
+                        style="@style/Widget.AppCompat.Button.Colored" />
+
+                    <Button
+                        android:text="EVENING"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/button12"
+                        android:layout_weight="1"
+                        style="@style/Widget.AppCompat.Button.Colored" />
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
 </RelativeLayout>
