--- a/app/src/main/res/layout/content_main_activity_basic.xml
+++ b/app/src/main/res/layout/content_main_activity_basic.xml
@@ -32,7 +32,8 @@
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:theme="@style/CardView">
 
                 <TextView
                     android:text="Current daily dosage:"
