--- a/app/src/main/res/layout/content_main_activity_basic.xml
+++ b/app/src/main/res/layout/content_main_activity_basic.xml
@@ -46,7 +46,7 @@
                     android:layout_marginTop="14dp" />
 
                 <TextView
-                    android:text="35%"
+                    android:text="level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView23"
