--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -27,5 +27,6 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:adjustViewBounds="false" />
 </RelativeLayout>
