--- a/app/src/main/res/layout/content_morning.xml
+++ b/app/src/main/res/layout/content_morning.xml
@@ -18,99 +18,145 @@
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <TextView
-            android:text="How tired are you?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="0dp"
-            android:id="@+id/textView6"
-            android:textSize="30sp" />
-
-        <SeekBar
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="10"
-            android:progress="3"
-            android:id="@+id/seekBar15"
-            android:layout_marginTop="16dp" />
+            android:layout_margin="5dp"
+            android:layout_height="136dp">
 
-        <TextView
-            android:text="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seekBar2"
-            android:layout_alignEnd="@+id/textView14"
-            android:id="@+id/textView16"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="false"
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:textStyle="normal|bold" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal">
 
-        <TextView
-            android:text="How many hours \nuntil lunch?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView7"
-            android:textSize="30sp"
-            android:layout_below="@+id/textView16"
-            android:layout_alignStart="@+id/textView6"
-            android:layout_marginTop="32dp" />
+                <TextView
+                    android:text="How tired are you?"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="14dp"
+                    android:id="@+id/textView6"
+                    android:textSize="30sp"
+                    android:layout_marginLeft="14dp" />
 
-        <SeekBar
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
+                <SeekBar
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="10"
+                    android:progress="3"
+                    android:id="@+id/seekBar15"
+                    android:layout_marginTop="16dp" />
+
+                <TextView
+                    android:text="3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/seekBar2"
+                    android:layout_alignEnd="@+id/textView14"
+                    android:id="@+id/textView16"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="false"
+                    android:layout_marginTop="16dp"
+                    android:textSize="20sp"
+                    android:textStyle="normal|bold" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="5"
-            android:progress="3"
-            android:id="@+id/seekBar16"
-            android:layout_marginTop="16dp" />
+            android:layout_margin="5dp"
+            android:layout_height="168dp">
 
-        <TextView
-            android:text="3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seekBar3"
-            android:layout_alignStart="@+id/textView14"
-            android:id="@+id/textView17"
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:textStyle="normal|bold" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal">
 
-        <TextView
-            android:text="Probability of soda \nat lunch?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:layout_marginTop="32dp"
-            android:layout_below="@+id/textView17"
-            android:layout_alignStart="@+id/textView7"
-            android:textSize="30sp" />
+                <TextView
+                    android:text="How many hours \nuntil lunch?"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView7"
+                    android:textSize="30sp"
+                    android:layout_below="@+id/textView16"
+                    android:layout_alignStart="@+id/textView6"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="14dp" />
 
-        <SeekBar
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
+                <SeekBar
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="5"
+                android:progress="3"
+                android:id="@+id/seekBar16"
+                android:layout_marginTop="16dp" />
+
+                <TextView
+                    android:text="3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/seekBar3"
+                    android:layout_alignStart="@+id/textView14"
+                    android:id="@+id/textView17"
+                    android:layout_marginTop="16dp"
+                    android:textSize="20sp"
+                    android:textStyle="normal|bold" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4"
-            android:progress="1"
-            android:id="@+id/seekBar17"
-            android:layout_marginTop="16dp" />
+            android:layout_margin="5dp"
+            android:layout_height="176dp">
 
-        <TextView
-            android:text="25%"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/seekBar6"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/textView14"
-            android:layout_marginTop="16dp"
-            android:textStyle="normal|bold"
-            android:textSize="20sp" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:text="Probability of soda \nat lunch?"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView8"
+                    android:layout_marginTop="14dp"
+                    android:layout_below="@+id/textView17"
+                    android:layout_alignStart="@+id/textView7"
+                    android:textSize="30sp"
+                    android:layout_marginLeft="14dp" />
+
+                <SeekBar
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    android:progress="1"
+                    android:id="@+id/seekBar17"
+                    android:layout_marginTop="16dp" />
+
+                <TextView
+                    android:text="25%"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/seekBar6"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/textView14"
+                    android:layout_marginTop="16dp"
+                    android:textStyle="normal|bold"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
 </RelativeLayout>
